Bug 1739561 - Honor break-inside:avoid on flex containers. r=dholbert

Note this patch only prevents "break-inside:avoid" flex containers from being
broken when they are not at the top of their current page/column. When they are
at the top of their current page/column, this patch fails to help since
`nsContainerFrame::ShouldAvoidBreakInside()` returns `false` via the
`mIsTopOfPage` check. This is essentially bug 793686.

Differential Revision: https://phabricator.services.mozilla.com/D149318